syntax="proto3";

service Instance {
	rpc CreateInstance(CreateInstanceRequest) returns (CreateInstanceResponse) {}
}
message CreateInstanceRequest{
    string instanceName=1;
    int32  companyId=2;
}

message CreateInstanceResponse{
    string instanceName=1;
}